--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 Data\ Structures\ Using\ C/Chapter\ 3\ -\ Arrays/obj/
 Data\ Structures\ Using\ C/Chapter\ 3\ -\ Arrays/bin/
+
+*.out
+*.csproj
+*.code-workspace
+C#/bin/
+C#/obj/
+*.layout
