--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-Data\ Structures\ Using\ C/Chapter\ 3\ -\ Arrays/obj/
-Data\ Structures\ Using\ C/Chapter\ 3\ -\ Arrays/bin/
 *.vscode
 *.out
 *.csproj
@@ -8,3 +6,4 @@ C#/bin/
 C#/obj/
 *.layout
 *.c.swp
+*.cpp.swp
